# Fitness-Coach

./: README.md  pyproject.toml
data/: fitness_coach_sqldb.db
data/csv/: exercises.csv
src/: Fitness_Coach.ipynb
src/configs/: app_config.yml  project_config.yml  tools_config.yml
src/utils/: load_config.py
